--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,8 +4,10 @@
       <img src="assets/logo-LlMontreal.svg" alt="LlMontreal logo" class="logo-icon" />
       <span class="brand-name">LLMontreal</span>
     </a>
+      <div class="header-divider"></div>
+
       <nav class="header-nav" aria-label="Primary Navigation">
-        <a routerLink="/upload" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/upload-document" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
   Upload de Documento
 </a>
 
