fix: add chat route

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
               </td>
 
               <td class="table-td">
-                <a class="action-link" [routerLink]="['/documents', document.id]" aria-label="Ver Detalhes"
+                <a class="action-link" [routerLink]="['/chat', document.id]" aria-label="Ver Detalhes"
                   title="Ver Detalhes">
                   <mat-icon>visibility</mat-icon>
                 </a>
