--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-<main>
   <div class="container">
     <div class="layout-between header-row">
       <h1>Dashboard de Documentos</h1>
@@ -36,7 +35,15 @@
             ? 'btn-filter--active'
             : 'btn-filter--inactive'
         " (click)="onFilterChange('FAILED')">
-        <p class="filter-label">Erro</p>
+        <p class="filter-label">Falhou</p>
+      </button>
+
+      <button class="btn-filter" [ngClass]="
+          selectedFilter === 'PENDING'
+            ? 'btn-filter--active'
+            : 'btn-filter--inactive'
+        " (click)="onFilterChange('PENDING')">
+        <p class="filter-label">Pendente</p>
       </button>
     </div>
 
@@ -44,17 +51,17 @@
       <div class="overflow-x-auto">
         <table class="table" matSort (matSortChange)="onSortChange($event)" matSortActive="uploadDate"
           matSortDirection="desc">
-          <thead>
+        <thead>
             <tr class="table-head">
               <th class="table-th">Nome do Arquivo</th>
-              <th class="table-th" mat-sort-header="type">
-                Tipo
-              </th>
-              <th class="table-th" mat-sort-header="uploadDate">
-                Data de Upload
-              </th>
+            <th class="table-th" mat-sort-header="type">
+              Tipo
+            </th>
+            <th class="table-th" mat-sort-header="uploadDate">
+              Data de Upload
+            </th>
 
-              <th class="table-th">Status</th>
+            <th class="table-th">Status</th>
               <th class="table-th">Ações</th>
             </tr>
           </thead>
@@ -103,10 +110,8 @@
           </tbody>
         </table>
       </div>
-    </div>
 
     <mat-paginator [length]="totalElements" [pageSize]="size" [pageSizeOptions]="[5, 10, 25]"
       (page)="onPageChange($event)">
     </mat-paginator>
   </div>
-</main>
