fix: corrige bugs

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
             ? 'btn-filter--active'
             : 'btn-filter--inactive'
         " (click)="onFilterChange('FAILED')">
-        <p class="filter-label">Falhou</p>
+        <p class="filter-label">Erro</p>
       </button>
 
       <button class="btn-filter" [ngClass]="
